# shoptech

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/: ci-backend.yaml
.github/workflows/: ci-backend.yaml
backend/: .env  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 1ceeeaf2cb5b_create_tables.py  40c00f53910a_create_tables.py  8deb73f41c7c_create_customers_table.py  9235729c575d_create_products_table.py
backend/shoptech_dbt/: dbt_project.yml  profiles.yml
backend/shoptech_dbt/macros/: generate_schema_name.sql  test_not_negative_and_zero_values.sql
backend/src/: database.py  load.py  models.py  schemas.py  settings.py
backend/src/core/: database.py
backend/src/data/: customers.py  (+2 more)
backend/tests/: conftest.py  test_models.py
core/: database.py  settings.py
frontend/: .env  Dockerfile  main.py  requirements.txt
frontend/.streamlit/: secrets.toml
frontend/modules/: nav.py
frontend/pages/: customer_profile.py  fct_orders.py  mom_variance.py  revenue_tier_per_customer.py  sales_by_region.py  sub_category_sales_and_margin.py  top10_sales_products_with_margin_ranking.py  yoy_variance.py
migrations/versions/: 8deb73f41c7c_create_customers_table.py
models/: customers.py
scripts/: init_db.sh
shoptech_dbt/: Dockerfile  profiles.yml  requirements.txt
shoptech_dbt/tests/: assert_delivery_date_higher_shipping_date.sql  assert_eta_higher_shipping_date.sql
tests/: conftest.py  test_models.py
tests/data/: test_product_generator.py
(+31 files in other folders)
